<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/walletNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp"
            android:text="@string/walletNameLabel"
            android:textSize="@dimen/smallFontSize"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/walletName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walletNameLabel"
            android:layout_marginBottom="8dp"
            android:hint="@string/walletNameLabel"
            android:inputType="textAutoCorrect"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/walletInitialAmountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walletName"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp"
            android:text="@string/walletInitialAmountLabel"
            android:textSize="@dimen/smallFontSize"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/walletInitialAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walletInitialAmountLabel"
            android:layout_marginBottom="8dp"
            android:hint="@string/walletInitialAmountLabel"
            android:inputType="text"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/walletCurrentAmountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walletInitialAmount"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="16dp"
            android:text="@string/walletCurrentAmountLabel"
            android:textSize="@dimen/smallFontSize"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/walletCurrentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/walletCurrentAmountLabel"
            android:paddingBottom="16dp"
            android:paddingTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="@dimen/mediumFontSize"
            android:visibility="invisible" />
    </RelativeLayout>
</ScrollView>
