<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wallet="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_action_save"
        android:title="@string/add"
        wallet:showAsAction="ifRoom" />
</menu>